--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = /usr/bin
+home = C:\Users\Administrator\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
-version = 3.9.24
+version = 3.13.0
+executable = C:\Users\Administrator\AppData\Local\Programs\Python\Python313\python.exe
+command = C:\Users\Administrator\AppData\Local\Programs\Python\Python313\python.exe -m venv D:\National College of Ireland\Cloud DevOpSec\Worknity\worknity\env
