--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,11 +27,13 @@ jobs:
       run: |
         pip install django boto3 pylint
 
-    - name: Run SonarCloud Scan
+    - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v2
-      with:
-        args: >
-          -Dsonar.python.version=3.9
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.python.version=3.9
+          -Dsonar.sources=worknity
+          -Dsonar.projectBaseDir=worknity
