--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,13 +27,11 @@ jobs:
       run: |
         pip install django boto3 pylint
 
-    - name: SonarCloud Scan
+    - name: Run SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
           -Dsonar.python.version=3.9
-          -Dsonar.sources=worknity
-          -Dsonar.projectBaseDir=worknity
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
